data/derived/comb/progs/unify/prog6231.ml.out
Characters 267-273:
  | 4 -> buildAverage  (build(rand,depth-1), buildY)
                                             ^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
